Upgrade Java to JDK 1.7 and stanford-corenlp
Upgrade of severals Java correction to include the new Java JVM requirement and upgrde stanford-corenlp to version 4.4.0